src/assets/scss/parts/_slider.scss
.slider {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 100%;

  margin-top: 6.8rem;

  background-color: $neutral-300;

  @media screen and (min-width: 768px) {
    margin-top: 0;
  }

}

.slider__wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 100%;
  height: 100%;

  overflow: hidden;

}

.slider__item {
  position: relative;
  display: flex;
  justify-content: flex-start;

  width: 100%;
  height: 24rem;

  background-color: $white;
  transition: 1s;

  @media screen and (min-width: 768px) {
    height: 40rem;
  }

  @media screen and (min-width: 1024px) {
    height: 60rem;
  }

}

.slider__link-wrapper {
  display: flex;


  width: 100%;
  height: 100%;

  cursor: pointer;
}

.slider__link {
  position: relative;
  display: flex;
  width: 100%;
  height: 24rem;

}

// Content in slider
.slider__describe-block {
  position: absolute;
  top: 3rem;
  left: 1.5rem;

  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;

  width: 100%;
  height: 10rem;

  padding-right: 2rem;
  box-sizing: border-box;

  @media screen and (min-width: 1024px) {
    left: calc(50% - 50rem);

    width: 102rem;
  }

}

.slider__describe-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 1;

  height: 2.4rem;

  margin-bottom: 1.6rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
  box-sizing: border-box;

  font-size: 0.9rem;
  font-weight: 300;
  color: $white;
  text-transform: uppercase;

  background-color: $secondary;

  cursor: pointer;
  user-select: none;

  @media screen and (min-width: 1024px) {
    height: 3rem;

    margin-bottom: 3rem;
    padding-left: 2rem;
    padding-right: 2rem;

    font-size: 1.4rem;
  }

}

.slider__describe-h2 {
  width: 100%;

  margin-bottom: 1rem;

  font-size: $mainFs;
  font-weight: 500;
  line-height: 2.1rem;
  color: $white;
  text-transform: uppercase;

  @media screen and (min-width: 1024px) {
    margin-bottom: 2rem;

    font-size: 4.6rem;
    line-height: 5.4rem;
  }
}

.slider__describe-txt {
  width: 100%;

  font-size: $s-Fs;
  font-weight: 300;
  line-height: 1.8rem;
  color: $white;

  @media screen and (min-width: 1024px) {

    font-size: 2.4rem;
    line-height: 3rem;
  }
}

// *******




.slider__item-img {
  width: 76.8rem;
  object-fit: cover;

  @media screen and (min-width: 768px) {
    width: 144rem;
    height: 40rem;

  }

  @media screen and (min-width: 1024px) {
    width: 260rem;
    height: 60rem;
  }
}


.slider__btn-wrapper {

  @media screen and (min-width: 1024px) {
    position: absolute;
    top: 0;
    left: calc(50% - 50rem);
    display: flex;

    width: 100rem;
    height: 60rem;
  }
}


.slider__btn {
  position: absolute;
  bottom: 0;

  @include no-btn
}

.slider__prev {
  bottom: 1rem;
  left: 1.5rem;
  transform: rotate(180deg);
}
.slider__next {
  bottom: 0.8rem;
  right: 1.5rem;
}

.slider__icon-move {
  width: 1.8rem;
  height: 1.2rem;

  fill: $white;

  &--left {
    transform: rotate(180deg);
  }
}


.slider__line-block {
  position: absolute;
  bottom: 1.5rem;
  left: calc(50% - 5.5rem);
  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 11rem;
  height: 0.2rem;


}

.slider__line {
  display: block;
  width: 3rem;
  height: 100%;

  background-color: $white;

  &.active {
    background-color: $secondary;
  }
}

